# AriannesNetworks

./: .gitignore  HOW_TO_RESTORE_ORIGINALS.md  PARITY_FAILURE_ANALYSIS.md  QUICK_START.md  README.md  RESTORE_ORIGINALS.md  SYSTEMATIC_FRAUD_DOCUMENTATION.md  analyze_both_networks_final.R  analyze_both_networks_osf.R  analyze_both_networks_osf_correct.R  build_item_mapping.py  calculate_25x_correct_metric.R  calculate_centralization.R  calculate_centralization_plan.md  check_osf_results_objects.R  check_p0_results.py  check_r_results.py  check_save_location.R  check_structure_detailed.R  compare_actual_results.R  compare_with_r_results.py  compute_decisions_2_to_5.R  compute_tier4_irt.R  compute_tier4_ml.R  compute_tier4_ml_corrected.R  compute_tiers_1_to_3.py  decompress_rdata.py  direct_comparison_test.py  download_osf_all_files.py  examine_r_data.py  examine_rdata_detailed.py  extract_r_results.R  extract_r_results.py  find_25_in_pdf.py  manual_extract_results.py  merge_item_text_into_results.py  pyproject.toml  r_requirements.txt  read_r_results.py  read_rdata_results.py  (+24 more)
data/: NEO & IPIP - P0_functions.RData  NEO & IPIP - P1_nSim50_data_A.RData  NEO & IPIP - P1_nSim50_data_N.RData  NEO & IPIP - P3_nSim50_results_all_A.RData  NEO & IPIP - P3_nSim50_results_all_N.RData
docs/: 2.5x_finding_explanation.md  A_vs_N_differences.md  CLARIFICATION_what_are_results.md  CORRECT_METRIC_FOUND.md  PLAN_REVIEW_senior_dev_statistician.md  WHAT_METRIC_DOES_PAPER_USE.md  both_networks_analysis_summary.csv  conversation_noise_entropy_item_weighting.md  documentation.md  formal_math_item_sample_equivalence.md  gui_tooltips_green_red.md  results_comparison.md  results_summary_CORRECTED.md  results_summary_OLD_backup.md  summary_noise_analysis_and_ml_proposal.md
notebooks/: Personality_Network_Analysis.ipynb
r_scripts/: NEO & IPIP - Extra.R  NEO & IPIP - P0 - all functions.R  NEO & IPIP - P1 - data pre-processing & whole-sample_N.R  (+5 more)
(+59 files in other folders)
